infrastructure/gitops/apps/nexus/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nexus
  labels:
    app.kubernetes.io/part-of: kubani
    app.kubernetes.io/component: nexus
